I have updated the registration form to include timezone and google calendar tokens as well as instructions on how to obtain your token. Unclear how I can validate this field. Will look into it.
I also created some classes designed to interact with the Google Calendar API, but testing has not begun.

TO DO: Add a link to the event form and begin testing